--- a/veterinaria/menu/templates/menu/HTML/Nosotros.html
+++ b/veterinaria/menu/templates/menu/HTML/Nosotros.html
@@ -1,62 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'menu/HTML/Plantilla.html' %}
+
     {% load static %}
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
-    <link rel="stylesheet" href="{% static 'menu/css/estilo.css' %}">
-    <link rel="stylesheet" href="{% static 'menu/css/ESTILO2.css' %}">
-    
+
+    {% block titulo %}     
+    <title>NOSOTROS</title>
+    {% endblock titulo %}
+
+    {% block estilos %}
     <link rel="stylesheet" href="{% static 'menu/css/estilosNOSOTROS.css' %}">
-   
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-</head>
-
-<body>
+    {% endblock estilos %}
     
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-            crossorigin="anonymous"></script>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="circulo" href="{% url 'Inicio.html' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                     <a class="nav-link" href="{% url 'Inicio.html' %}">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'AgendaOnline.html' %}">Agenda Online</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Contacto.html' %}">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Nosotros.html' %}">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Servicios.html' %}">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Login.html' %}">Iniciar Sesión</a>
-              </li>
+    
 
-                </div>
+      
+      {% block cuerpo %}
 
-
-                </ul>
-
-            </div>
-            </div>
-        </nav>
         <section class="textos-header">
             <h1>¿Quiénes Somos?</h1>
             <h2>Clínica Veterinaria NovaVet es una empresa dedicada al cuidado de las mascotas</h2>
@@ -136,7 +94,7 @@
                     </div>
 
                 </div>
-                <center> <a href="{% url 'Servicios.html' %}"><button class="custom-btn btn-3"> <span>Nuestros
+                <center> <a href="{% url 'Servicios' %}"><button class="custom-btn btn-3"> <span>Nuestros
                                 servicios</span></button></a></center>
             </div>
         </section>
@@ -173,6 +131,6 @@
     <script src="{% static 'menu/JAVA/flow.js' %}"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
-</body>
 
-</html>
+
+     {% endblock cuerpo %}
