--- a/veterinaria/menu/templates/menu/HTML/OlvidoContra.html
+++ b/veterinaria/menu/templates/menu/HTML/OlvidoContra.html
@@ -1,55 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'menu/HTML/Plantilla.html' %}
+
     {% load static %}
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {% block titulo %}     
     <title>¿Olvidaste tu contraseña?</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'menu/css/estilo.css' %}">
-        <link rel="stylesheet" href="{% static 'menu/css/ESTILO2.css' %}">
+    {% endblock titulo %}
 
+    {% block estilos %}
     <link rel="stylesheet" href="{% static 'menu/css/login.css' %}">
-
-</head>
-
-<body>
-
+    {% endblock estilos %}
     
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-            crossorigin="anonymous"></script>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="circulo" href="{% url 'Inicio.html' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                     <a class="nav-link" href="{% url 'Inicio.html' %}">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'AgendaOnline.html' %}">Agenda Online</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Contacto.html' %}">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Nosotros.html' %}">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Servicios.html' %}">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Login.html' %}">Iniciar Sesión</a>
-              </li>
-                </div>
-            </div>
-        </nav>
+    
+
+      
+      {% block cuerpo %}
+
         <div class="container" id="container">
             <div class="form-container sign-up-container" id="form">
                 <form action="#" class="formulario" id="formulario">
@@ -76,7 +41,7 @@
                     <input type="email" placeholder="Correo electrónico"  id="correoOlvida" id="correoOlvida"/>
                     <input type="password" placeholder=" Ingresa tu nueva contraseña" id="contraOlvida" />
                     <input type="password" placeholder=" Ingresa nuevamente la contraseña" id="contraNueva"/>
-                    <a href="{% url 'Login.html' %}">Volver a inicio de sesión</a>
+                    <a href="{% url 'Login' %}">Volver a inicio de sesión</a>
                     <button type="submit" onclick="return enviaformolvida();" values="enviar">Restablecer Contraseña</button>
                     <div id="errorOlvida"></div>
                 </form>
@@ -102,7 +67,4 @@
         <script src="{% static 'menu/JAVA/javaFormulario.js' %}"></script>
         <script src="{% static 'menu/JAVA/OlvidoContra.js' %}"></script>
         
-        
-    </body>
-
-</html>
+        {% endblock cuerpo %}
