--- a/veterinaria/menu/templates/menu/HTML/Servicios.html
+++ b/veterinaria/menu/templates/menu/HTML/Servicios.html
@@ -1,60 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-  {% load static %}
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Servicios</title>
-  <link rel="stylesheet" href="{% static 'menu/css/estilo.css' %}">
-  <link rel="stylesheet" href="{% static 'menu/css/ESTILO2.css' %}">
-  
-  <link rel="stylesheet" href="{% static 'menu/css/SER.css' %}">
+{% extends 'menu/HTML/Plantilla.html' %}
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
+    {% load static %}
 
-<body>
-  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-      crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="circulo" href="{% url 'Inicio.html' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                     <a class="nav-link" href="{% url 'Inicio.html' %}">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'AgendaOnline.html' %}">Agenda Online</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Contacto.html' %}">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Nosotros.html' %}">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Servicios.html' %}">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Login.html' %}">Iniciar Sesión</a>
-              </li>
-        </div>
+    {% block titulo %}     
+    <title>SERVICIOS</title>
+    {% endblock titulo %}
 
+    {% block estilos %}
+    <link rel="stylesheet" href="{% static 'menu/css/SER.css' %}">
+    {% endblock estilos %}
+    
+    
 
-        </ul>
-
-      </div>
-      </div>
-    </nav>
-
+      
+      {% block cuerpo %}
+    
     <section class="textos-header">
       <h1>Servicios</h1>
       <h2>Contamos con múltiples herramientas, con el fin de cuidar a nuestros pacientes.</h2>
@@ -132,7 +92,7 @@
       </table>
       </div>
     </center>
-    <center> <a href="../HTML/AgendaOnline.html"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
+    <center> <a href="../HTML/AgendaOnline"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
     </center>
   </section>
   </main>
@@ -162,7 +122,7 @@
       </table>
       </div>
     </center>
-    <center> <a href="{% url 'AgendaOnline.html' %}"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
+    <center> <a href="{% url 'AgendaOnline' %}"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
     </center>
   </section>
   </main>
@@ -192,7 +152,7 @@
       </table>
       </div>
     </center>
-    <center> <a href="{% url 'AgendaOnline.html' %}"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
+    <center> <a href="{% url 'AgendaOnline' %}"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
     </center>
   </section>
   </main>
@@ -222,7 +182,7 @@
       </table>
       </div>
     </center>
-    <center> <a href="{% url 'AgendaOnline.html' %}"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
+    <center> <a href="{% url 'AgendaOnline' %}"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
     </center>
   </section>
   </main>
@@ -244,9 +204,4 @@
   </footer>
 
 
-
-
-
-</body>
-
-</html>
+  {% endblock cuerpo %}
